# Python

./: Heuristic Markdown Generation.py  README.md  chatdoc.crawl_results.json  comparison.ipynb  comparison.py  fit_output.md  img_resize.py  link1_crawl4ai_depth1.json  link1_crawl4ai_depth2.json  link1_ourcrawler_depth1.json  link1_ourcrawler_depth2.json  link1_ourcrawler_depth3.json  link2_crawl4ai_depth1.json  link2_crawl4ai_depth2.json  link2_ourcrawler_depth1.json  link2_ourcrawler_depth2.json  link3_crawl4ai_depth1.json  link3_crawl4ai_depth2.json  link3_ourcrawler_depth1.json  link3_ourcrawler_depth2.json  link3_sitemap.json  links.json  medium_crawl4ai_depth2.json  normalize_url copy.py  normalize_url.py  raw_output.md  test.py  testday.py  visited_urls.txt
Crawl4AI/: Deep_Crawling.py  Multi-URL_Concurrency copy.py  Multi-URL_Concurrency.py  Quick_Start copy.py  Quick_Start.py  Simple_Crawling.py  aiohttp_test copy.py  aiohttp_test.py  basic_deep_crawl copy.py  basic_deep_crawl.py  complete_advanced_crawler.py  dynamic_content.py  exception_test.py  extract_structured_data.py  heuristic_markdown_generation.py  multi-url_concurrency.py  own_browser.py  quick_test.py  simple_web_crawl copy.py  simple_web_crawl.py  sitemap.py  structured_data_with_llms.py  test.py  test.xml
LangGraph/: 6-time-travel.ipynb  map-reduce-and-the-send-api.ipynb  pyproject.toml  report-generator.ipynb  sql-agent.ipynb  sql_database.ipynb  sql_qa.ipynb  test.py  time-travel.ipynb  tools.py  workflow.ipynb  workflow.py
OpenCV/: test.py  test1.py
example-app/: pyproject.toml
(+60 files in other folders)
